Fixed container width issue on mobile

--- a/assets/scss/_forms.scss
+++ b/assets/scss/_forms.scss
@@ -66,7 +66,7 @@ select.form-control {
     flex-wrap: wrap;
     margin: 0 -5px ;
 
-    @include media-breakpoint-down(md) {
+    @include media-breakpoint-down(sm) {
         flex-direction: column;
         margin: -5px 0;
         .btn{
