--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -7,16 +7,17 @@
 }
 
 .site-content,
-.site-header .container,
-.site-footer .container,
-{
-    @include make-container();
-    @include make-container-max-widths((sm: 540px, md: 740px));
-    padding-top: $spacer;
-    padding-bottom: $spacer;
-    @include media-breakpoint-up(md) {
-        padding-top: $spacer*2;
-        padding-bottom: $spacer*2;
+.site-header,
+.site-footer {
+    .container {
+        @include make-container();
+        @include make-container-max-widths((sm: 540px, md: 740px));
+        padding-top: $spacer;
+        padding-bottom: $spacer;
+        @include media-breakpoint-up(md) {
+            padding-top: $spacer*2;
+            padding-bottom: $spacer*2;
+        }
     }
 }
 
@@ -76,7 +77,7 @@
     background: $gray-200;
     font-size: $font-size-sm;
     text-align: center;
-    
+
     .menu {
         margin-top: $spacer;
         justify-content: center;
@@ -119,10 +120,10 @@
 .recent-posts {
     @include make-container();
     @include make-container-max-widths((lg: 960px, xl: 1140px));
-    
+
     margin-top: $spacer;
     margin-bottom: $grid-gutter-width/2;
-    
+
     @include media-breakpoint-up(md) {
         margin-bottom: $spacer* -5;
         z-index: 1;
@@ -148,8 +149,7 @@
                 color: $body-color;
                 @include transition(all .1s ease-out);
                 &:hover {
-                    @include color-yiq($theme-color);
-                    // @include media-breakpoint-up(lg) {
+                    @include color-yiq($theme-color); // @include media-breakpoint-up(lg) {
                     //     transform: scale(1.1);
                     // }
                 }
@@ -183,7 +183,7 @@
         }
     }
 
-    + .site-footer{
+    +.site-footer {
         @include media-breakpoint-up(md) {
             padding-top: $spacer*5;
         }
@@ -247,9 +247,10 @@
     }
 }
 
-.error404{
-    .site-content{
-        text-align:center;
+body.search,
+body.error404 {
+    #main.container {
+        text-align: center;
         @include make-container-max-widths((sm: 540px));
     }
 }
