--- a/assets/scss/_prism.scss
+++ b/assets/scss/_prism.scss
@@ -147,70 +147,3 @@ pre[class*="language-"] {
 .token.entity {
     cursor: help;
 }
-
-
-/**
- * Copy to clipboard
- */
-
-pre.code-toolbar {
-    position: relative;
-}
-
-pre.code-toolbar>.toolbar {
-    position: absolute;
-    top: 0;
-    right: 0;
-    transition: opacity 0.3s ease-in-out;
-    opacity: 0;
-}
-
-pre.code-toolbar:hover>.toolbar {
-    opacity: 1;
-}
-
-pre.code-toolbar>.toolbar .toolbar-item {
-    display: inline-block;
-}
-
-pre.code-toolbar>.toolbar a {
-    cursor: pointer;
-}
-
-pre.code-toolbar>.toolbar button {
-    background: none;
-    border: 0;
-    color: inherit;
-    font: inherit;
-    line-height: normal;
-    overflow: visible;
-    padding: 0;
-    -webkit-user-select: none;
-    /* for button */
-    -moz-user-select: none;
-    -ms-user-select: none;
-}
-
-pre.code-toolbar>.toolbar a,
-pre.code-toolbar>.toolbar button,
-pre.code-toolbar>.toolbar span {
-    font-size: .8em;
-    padding: 10px 15px;
-    line-height: 1;
-    text-transform: uppercase;
-    display: block;
-    background: rgba($black, .3);
-    &:hover {
-        background: $black;
-    }
-}
-
-pre.code-toolbar>.toolbar a:hover,
-pre.code-toolbar>.toolbar a:focus,
-pre.code-toolbar>.toolbar button:hover,
-pre.code-toolbar>.toolbar button:focus,
-pre.code-toolbar>.toolbar span:hover,
-pre.code-toolbar>.toolbar span:focus {
-    color: inherit;
-    text-decoration: none;
-}
